--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -27,6 +27,21 @@ margin-top: 10px;
   font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
+
+.button-details{
+  background-color: white;
+  color: black;
+  border: 2px solid #ecd8c6;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+ }
+
+
 body{
   background-repeat: no-repeat;
   background-image: white;
@@ -96,3 +111,61 @@ margin-top: 50px;
 margin-bottom: 30px;
 font-weight: lighter;
 }
+
+#restaurants_image {
+  display: flex;
+  background-image: url("/images/restaurant.jpg");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-table {
+  border: 20px;
+  padding-top: 40 px;
+  padding-left: 20px;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  background-color: rgba(0,0,0,0.6);
+  font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
+  text-align: center;
+  color: white;
+}
+
+
+.button{
+    background-color: white;
+    color: black;
+    border: 2px solid #ecd8c6;
+    padding: 8px 8px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.button: hover {
+    color: blue;
+  }
+
+.button-new {
+      background-color: white;
+      color: black;
+      border: 2px solid #ecd8c6;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      padding: 10px 20px;
+      margin-left: 60px;
+      margin-right: 60px;
+
+  }
