Added style to show restaurant

--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -135,6 +135,7 @@ font-weight: lighter;
   margin-bottom: 20px;
   background-color: rgba(0,0,0,0.6);
   font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
+  font-size: 18px;
   text-align: center;
   color: white;
 }
