--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -50,6 +50,7 @@ body{
   background-size: 1024px 768px;
   padding-top: 0;
   height: : 100%;
+  font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
 #menu {
@@ -138,6 +139,10 @@ font-weight: lighter;
   font-size: 18px;
   text-align: center;
   color: white;
+
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
 }
 
 
@@ -175,8 +180,45 @@ font-weight: lighter;
   background-image: url("/images/customer.jpg");
   background-repeat: no-repeat;
   width: 100%;
+  min-height: 400px;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
+#tables_image {
+  display: flex;
+  background-image: url("/images/table.jpg");
+  background-repeat: no-repeat;
+  width: 100%;
   height: 400px;
   background-size: cover;
   justify-content: center;
   align-items: center;
 }
+
+.restaurant {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.pageHeader {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.flex-center {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+td{
+padding-bottom: 2em;
+}
+
