Added image to item view

--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -260,3 +260,13 @@ td{
 padding-bottom: 2em;
 }
 
+#item_image {
+  display: flex;
+  background-image: url("/images/items.jpg");
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 400px;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
