Auto stash before merge of "develop" and "origin/develop"

--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -251,6 +251,10 @@ margin-bottom: 20px;
   justify-content: center;
 }
 
+.toppadding {
+padding-top: 2em;
+}
+
 td{
 padding-bottom: 2em;
 }
@@ -268,5 +272,9 @@ padding-bottom: 2em;
 
 th{
 padding-bottom: 2em;
+}
+
+p{
+padding:0.4em
 }
 
