--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -3,7 +3,7 @@
   background-image: url("/images/table-booking.jpg");
   background-repeat: no-repeat;
   width: 100%;
-  height: 400px;
+  min-height: 400px;
   background-size: cover;
   justify-content: center;
   align-items: center;
