--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -128,10 +128,10 @@ font-weight: lighter;
 .container-table {
   border: 20px;
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 20px;
   margin-top: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
   padding: 1em;
   background-color: rgba(0,0,0,0.6);
   font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
@@ -151,9 +151,10 @@ font-weight: lighter;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin-bottom: 20px;
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-right: 2px;
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 .button:hover {
@@ -262,7 +263,7 @@ padding-top: 2em;
 }
 
 td{
-padding-bottom: 2em;
+    padding-top: 1em;
 }
 
 #item_image {
@@ -278,7 +279,7 @@ padding-bottom: 2em;
 }
 
 th{
-padding-bottom: 2em;
+padding-bottom: 0.5em;
 }
 
 p{
@@ -296,5 +297,14 @@ padding:0.4em
 }
 
 .item_drop_menu{
-      margin-top: 1.5em;
+      margin-top: 1.8em;
+}
+
+.total {
+    padding-bottom: 0em;
+    padding-top: 0.8em;
+}
+
+.item_list_button{
+margin: 0px;
 }
