Fixed Booking Edit page

--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -308,3 +308,12 @@ padding:0.4em
 .item_list_button{
 margin: 0px;
 }
+
+.booking-edit{
+  text-align: left;
+}
+
+.edit-option{
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
