--- a/java_project_restaurant/src/main/resources/public/style.css
+++ b/java_project_restaurant/src/main/resources/public/style.css
@@ -50,6 +50,7 @@ body{
   background-size: 1024px 768px;
   padding-top: 0;
   height: : 100%;
+  min-width: 500px;
   font-family: Tate regular,Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
@@ -118,7 +119,7 @@ font-weight: lighter;
   background-image: url("/images/restaurant.jpg");
   background-repeat: no-repeat;
   width: 100%;
-  height: 400px;
+  min-height: 400px;
   background-size: cover;
   justify-content: center;
   align-items: center;
@@ -138,9 +139,33 @@ font-weight: lighter;
   font-size: 18px;
   text-align: center;
   color: white;
-  width: fit-content;
+  width: -webkit-fill-available;
   display: flex;
   justify-content: center;
+}
+
+@media all and (max-width: 700px) {
+ .container-table  {
+display: column;
+}
+}
+
+@media all and (max-width: 700px) {
+ #bookings_image_show  {
+flex-wrap: wrap;
+}
+}
+
+@media all and (max-width: 700px) {
+ #customers_image  {
+flex-wrap: wrap;
+}
+}
+
+@media all and (max-width: 700px) {
+ #tables_image  {
+flex-wrap: wrap;
+}
 }
 
 .button{
